style: add html structure, colors and images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./src/img/logo2.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400&family=Racing+Sans+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
+
+
     <title>Delivery safe</title>
 </head>
-<body>
-
+<body class="container">
+    <header>
+        <div class="title-container">
+            <h1>Delivery bom</h1>
+            <h2>Entrega boa, tem segurança do inicio ao fim</h2>
+        </div>
+        <img src="./src/img/logo.png" alt="Logo do delivery safe, placa de trânsito com entregador em cima da bicicleta">
+    </header>
+    <section>
+        <!-- Aqui vem o cronometro -->
+        <p>26 fev/ seg <span class="time">14h </span></p>
+    </section>
+    <form action="">
+        <label for="name">Preêncha seu nome</label>
+        <input type="text" id="name" placeholder="Nome">
+        <label for="e-mail">Preêncha o whatsapp</label>
+        <input type="text" value="(00)00000-0000" id="e-mail">
+        <div class="confirm-container">
+            <input type="checkbox" id="confirm">
+            <label for="confirm">Tenho interesse de ir ao evento</label>
+        </div>
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
