style: desktop format

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <section>
         <!-- Aqui vem o cronometro -->
-        <p class="date">26 fev/ seg <span class="time">14h </span></p>
+        <p class="date">26 fev/ seg <span style="font-size: 3rem;" class="time">14h </span></p>
     </section>
     </div>
     <div class="background-form">
@@ -39,10 +39,10 @@
             <label for="e-mail">Whatsapp</label>
             <input class="tel" type="text" placeholder="(00)00000-0000" id="e-mail">
 
-            <div class="confirm-container">
+            <label for="confirm confirm-container">Tenho interesse de ir ao evento
                 <input type="checkbox" id="confirm">
-                <label for="confirm">Tenho interesse de ir ao evento</label>
-            </div>
+                <span class="checkmark"></span>
+            </label>
             <input type="submit" value="Enviar" class="submit">
         </form>
     </div>
