feat: prevent defaut

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
     <header class="container-one">
         <div class="title-container">
-            <h1 class="title">Delivery bom</h1>
+            <h1 class="title"> <span lang="en-us">Delivery</span> bom</h1>
             <h2 class="sub-title">Entrega boa, tem segurança do inicio ao fim.</h2>
         </div>
         <img src="./src/img/logo.png" alt="Logo do delivery safe, placa de trânsito com entregador em cima da bicicleta" class="bici-image">
@@ -36,15 +36,18 @@
             <label for="name">Seu nome</label>
             <input class="name" type="text" id="name" placeholder="Nome">
 
-            <label for="e-mail">Whatsapp</label>
+            <label for="tel"> <span lang="en-us"></span>Whatsapp</label>
             <input class="tel" type="text" placeholder="(00)00000-0000" id="e-mail">
 
-            <label for="confirm confirm-container">Tenho interesse de ir ao evento
+            <label for="confirm confirm-container">
+                Tenho interesse de ir ao evento
                 <input type="checkbox" id="confirm">
                 <span class="checkmark"></span>
             </label>
+
             <input type="submit" value="Enviar" class="submit">
         </form>
     </div>
 </body>
+    <script src="./src/js/index.js"></script>
 </html>
