feat: global objects and warning

--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
     <div class="background-form">
         <form action="" class="form">
             <label for="name">Seu nome</label>
-            <input class="name" type="text" id="name" placeholder="Nome">
+            <input class="name check" type="text" id="name" placeholder="Nome">
 
             <label for="tel"> <span lang="en-us"></span>Whatsapp</label>
-            <input class="tel" type="text" placeholder="(00)00000-0000" id="e-mail">
+            <input class="tel check" type="tel" placeholder="(00)00000-0000" id="tel">
 
             <label for="confirm confirm-container">
                 Tenho interesse de ir ao evento
                 <input type="checkbox" id="confirm">
                 <span class="checkmark"></span>
             </label>
+            <div class="warning">
+                
+            </div>
 
             <input type="submit" value="Enviar" class="submit">
         </form>
