--- a/index.html
+++ b/index.html
@@ -34,31 +34,37 @@
     <div class="background-form">
         <form action="https://api.sheetmonkey.io/form/fgms3pPRE24gtzhh6Htk24" method="post" class="form">
             <label for="name">Seu nome</label>
-            <input class="name check" type="text" id="name" placeholder="Nome"  name="Example Header">
+            <input class="name check" type="text" id="name" placeholder="Nome"  name="Example Header"
+            title="Somente letras"
+            pattern="/^[a-zA-Z!#$%&'*+\/=?^_`{|}~-]+$/"
+            >
             <!-- title="Prência o primeiro nome"  -->
             <!-- required -->
 
             <label for="e-mail">E-mail</label>
             <input type="email" placeholder="meu.e-mail@email.com" id="e-mail" class="e-mail check" 
+            pattern="/^[a-zA-Z0-9!#$%&'*+\/=?^_`{|}~-]+@.+/"
             name="Example Header"
             >
-            <!-- title="O e-mail deve conter seu usuário o @ e o provedor." pattern="/^[a-z0-9.]+@[a-z0-9]+\.[a-z]+\.([a-z]+)?$/i
-            " -->
+            <!-- title="O e-mail deve conter seu usuário o @ e o provedor." 
+            pattern="/^[a-z0-9.]+@[a-z0-9]+\.[a-z]+(\.[a-z]+)?$/i" por que o pattern sempre retorna false?-->
 
             <label for="tel"> <span lang="en-us"></span>Whatsapp</label>
             <input class="tel check" type="tel" placeholder="(00)00000-0000" id="tel" 
             name="Example Header"
+            title="Escreva somente números"
+            pattern="/^[0-9]+$/"
             >
             
             <!-- pattern="^\d{3}-\d{2}-\d{4}$" title="Número de segurança social" -->
 
             <label for="confirm confirm-container">
-                Tenho interesse de ir ao evento
                 <input type="checkbox" id="confirm" name="Example Header">
                 <span class="checkmark"></span>
+                Tenho interesse de ir ao evento
             </label>
-            <div class="warning">
-                
+
+            <div class="warning">   
             </div>
 
             <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
