style: add inputs new face and animations/transitions

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </div>
         <img src="./src/img/logo.png" alt="Logo do delivery safe, placa de trânsito com entregador em cima da bicicleta" class="bici-image">
     </header>
+    <article>
+        <p class="invite">Inscreva-se agora mesmo e compareça no maior evento de segurança no trânsito para entregadores de BH.</p>
+    </article>
     <section>
         <!-- Aqui vem o cronometro -->
         <p class="date">26 fev/ seg <span style="font-size: 3rem;" class="time">14h </span></p>
@@ -69,7 +72,7 @@
 
             <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
 
-            <input type="submit" value="Submit" class="submit">
+            <input type="submit" value="Enviar" class="submit">
         </form>
         
     </div>
