fix: fix phone rejex added for html

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
             <label for="tel"> <span lang="en-us"></span>Whatsapp</label>
             <input class="tel check" type="tel" placeholder="(00)00000-0000" id="tel" 
             name="Example Header"
-            title="Escreva somente números"
-            pattern="/^[0-9]+$/"
+            maxlength="15"
             >
-            
+            <!-- title="Escreva somente números"
+            pattern="/^[0-9]+$/"
+             -->
             <!-- pattern="^\d{3}-\d{2}-\d{4}$" title="Número de segurança social" -->
 
             <label for="confirm confirm-container">
