--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </section>
     </div>
     <div class="background-form">
-        <form action="https://api.sheetmonkey.io/form/fgms3pPRE24gtzhh6Htk24" method="post" class="form">
+        <form class="form">
             <label for="name">Seu nome</label>
-            <input class="name check" type="text" id="name" placeholder="Nome"  name="Example Header"
+            <input class="name check" type="text" id="name" placeholder="Nome" 
             title="Somente letras"
             pattern="/^[a-zA-Z!#$%&'*+\/=?^_`{|}~-]+$/"
             >
@@ -62,7 +62,7 @@
              -->
             <!-- pattern="^\d{3}-\d{2}-\d{4}$" title="Número de segurança social" -->
 
-            <label for="confirm confirm-container">
+            <label for="confirm" class="">
                 <input type="checkbox" id="confirm" name="Example Header">
                 <span class="checkmark"></span>
                 Tenho interesse de ir ao evento
@@ -71,7 +71,6 @@
             <div class="warning">   
             </div>
 
-            <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
 
             <input type="submit" value="Enviar" class="submit">
         </form>
