--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             maxlength="15"
             >
             <!-- title="Escreva somente números"
-            pattern="/^[0-9]+$/"
-             -->
+            pattern="[0-9]*" -->
             <!-- pattern="^\d{3}-\d{2}-\d{4}$" title="Número de segurança social" -->
 
             <label for="confirm" class="">
