--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
 
-    <!-- <link rel="stylesheet" href="./src/css/style.css"> -->
+    <link rel="stylesheet" href="./src/css/style.css">
     <meta name="description" content="Evento para entregadores de Belo Horizonte com foco em segurança no trânsito.">
     <title>Delivery safe</title>
 </head>
